--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
         
     </div>
     <div class="quote">
-
+        <div class="top">
+            <section class="ttop">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people with actually read it. Who knows. All I know is that it looks nice.</section   >
+        </div>
+        <div class="bottom">
+            <section class="bbottom">- Thor, God of Thunder</section>
+        </div>
     </div>
     <div class="call-to-action">
         <div class="cat-left">
@@ -61,7 +66,7 @@
     <section class="cat-second">Sign up for our product by clicking that button right over there!</section>
         </div>
     <div class="cat-right">
-        <button class="white-button"> Sign Up</button>
+        <button class="abutton"> Sign Up</button>
     </div>
     </div>
     </div>
